# xml_conversao_moeda

./: README.md  conversoes.xml  gabarito_telaposxml.py  moedas.xml  pegar_cotacao.py  pegar_moedas.py  pyproject.toml
