[tool.poetry]
name = "xml-conversao-moeda"
version = "0.1.0"
description = ""
authors = ["paribe <paribe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xmltodict = "^0.14.2"
customtkinter = "^5.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
